--- a/MiBandImport/Form1.resx
+++ b/MiBandImport/Form1.resx
@@ -610,7 +610,7 @@
     <value>1</value>
   </data>
   <data name="tabPageUserData.Text" xml:space="preserve">
-    <value>UserData</value>
+    <value>Info</value>
   </data>
   <data name="&gt;&gt;tabPageUserData.Name" xml:space="preserve">
     <value>tabPageUserData</value>
