--- a/MiBand/Properties/Resources.en.resx
+++ b/MiBand/Properties/Resources.en.resx
@@ -117,43 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="buttonRead.Text" xml:space="preserve">
-    <value>Daten neu lesen</value>
+  <data name="Activ" xml:space="preserve">
+    <value>activ</value>
   </data>
-  <data name="labelShowTo.Text" xml:space="preserve">
-    <value>Anzeige bis</value>
+  <data name="ConnectionInfo" xml:space="preserve">
+    <value>Connectioninfo</value>
   </data>
-  <data name="labelShowFrom.Text" xml:space="preserve">
-    <value>Anzeige von</value>
+  <data name="DailyGoal" xml:space="preserve">
+    <value>Goal of day</value>
   </data>
-  <data name="radioButtonRoot.Text" xml:space="preserve">
-    <value>mit Root-Zugriff</value>
+  <data name="Record" xml:space="preserve">
+    <value>Record</value>
   </data>
-  <data name="radioButtonNoRoot.Text" xml:space="preserve">
-    <value>ohne Root</value>
+  <data name="Sleep" xml:space="preserve">
+    <value>sleeping</value>
   </data>
-  <data name="label1.Text" xml:space="preserve">
-    <value>soll Schlafdauer</value>
+  <data name="SumOfMonth" xml:space="preserve">
+    <value>Sum of month</value>
   </data>
-  <data name="buttonShowOldData.Text" xml:space="preserve">
-    <value>letzte Daten anzeigen</value>
+  <data name="SumOfWeek" xml:space="preserve">
+    <value>Sum of week</value>
   </data>
-  <data name="tabPageOriginTab.Text" xml:space="preserve">
-    <value>Tabelle</value>
+  <data name="TargetReached" xml:space="preserve">
+    <value>Goal reached</value>
   </data>
-  <data name="tabPageOriginGraphSteps.Text" xml:space="preserve">
-    <value>Grafik Schritte</value>
+  <data name="Unlook" xml:space="preserve">
+    <value>unlook</value>
   </data>
-  <data name="tabPageOriginGraphSleep.Text" xml:space="preserve">
-    <value>Grafik Schlaf</value>
-  </data>
-  <data name="tabPageOrigin.Text" xml:space="preserve">
-    <value>Verlauf</value>
-  </data>
-  <data name="tabPageUserData.Text" xml:space="preserve">
-    <value>Info</value>
-  </data>
-  <data name="labelWorkDirPhone.Text" xml:space="preserve">
-    <value>Arb.-Verzeichnis </value>
+  <data name="Walk" xml:space="preserve">
+    <value>walk</value>
   </data>
 </root>
