--- a/MiBand/Properties/Resources.de.xlf
+++ b/MiBand/Properties/Resources.de.xlf
@@ -6,45 +6,61 @@
     </header>
     <body>
       <group id="Resx">
-        <trans-unit id="Resx/Activ" translate="yes" xml:space="preserve">
-          <source>aktiv</source>
+        <trans-unit id="Resx/aktiv" translate="yes" xml:space="preserve">
+          <source>activ</source>
           <target state="signed-off">aktiv</target>
         </trans-unit>
-        <trans-unit id="Resx/ConnectionInfo" translate="yes" xml:space="preserve">
+        <trans-unit id="Resx/schlafen" translate="yes" xml:space="preserve">
+          <source>sleeping</source>
+          <target state="signed-off">schlafen</target>
+        </trans-unit>
+        <trans-unit id="Resx/Run" translate="yes" xml:space="preserve">
+          <source>Run</source>
+          <target state="signed-off">laufen</target>
+        </trans-unit>
+        <trans-unit id="Resx/Rekord" translate="yes" xml:space="preserve">
+          <source>Record</source>
+          <target state="signed-off">Rekord</target>
+        </trans-unit>
+        <trans-unit id="Resx/Monatszusammenfassung" translate="yes" xml:space="preserve">
+          <source>Sum of Month</source>
+          <target state="signed-off">Monatszusammenfassung</target>
+        </trans-unit>
+        <trans-unit id="Resx/Idle" translate="yes" xml:space="preserve">
+          <source>Idle</source>
+          <target state="signed-off">Inaktiv</target>
+        </trans-unit>
+        <trans-unit id="Resx/gehen" translate="yes" xml:space="preserve">
+          <source>walking</source>
+          <target state="signed-off">Gehen</target>
+        </trans-unit>
+        <trans-unit id="Resx/Entsperren" translate="yes" xml:space="preserve">
+          <source>unlock</source>
+          <target state="signed-off">Entsperren</target>
+        </trans-unit>
+        <trans-unit id="Resx/Sleep" translate="yes" xml:space="preserve">
+          <source>Sleep</source>
+          <target state="signed-off">Schlaf</target>
+        </trans-unit>
+        <trans-unit id="Resx/Verbindungsinfo" translate="yes" xml:space="preserve">
           <source>Verbindungsinfo</source>
           <target state="signed-off">Verbindungsinfo</target>
         </trans-unit>
-        <trans-unit id="Resx/DailyGoal" translate="yes" xml:space="preserve">
+        <trans-unit id="Resx/Tagesziel" translate="yes" xml:space="preserve">
           <source>Tagesziel</source>
           <target state="signed-off">Tagesziel</target>
         </trans-unit>
-        <trans-unit id="Resx/Record" translate="yes" xml:space="preserve">
-          <source>Rekord</source>
-          <target state="signed-off">Rekord</target>
+        <trans-unit id="Resx/Walk" translate="yes" xml:space="preserve">
+          <source>Walk</source>
+          <target state="signed-off">Gehen</target>
         </trans-unit>
-        <trans-unit id="Resx/Sleep" translate="yes" xml:space="preserve">
-          <source>schlafen</source>
-          <target state="signed-off">schlafen</target>
-        </trans-unit>
-        <trans-unit id="Resx/SumOfMonth" translate="yes" xml:space="preserve">
-          <source>Monatszusammenfassung</source>
-          <target state="signed-off">Monatszusammenfassung</target>
-        </trans-unit>
-        <trans-unit id="Resx/SumOfWeek" translate="yes" xml:space="preserve">
-          <source>Wochenzusammenfassung</source>
-          <target state="signed-off">Wochenzusammenfassung</target>
-        </trans-unit>
-        <trans-unit id="Resx/TargetReached" translate="yes" xml:space="preserve">
+        <trans-unit id="Resx/ZielErreicht" translate="yes" xml:space="preserve">
           <source>Ziel erreicht</source>
           <target state="signed-off">Ziel erreicht</target>
         </trans-unit>
-        <trans-unit id="Resx/Unlook" translate="yes" xml:space="preserve">
-          <source>Entsperren</source>
-          <target state="signed-off">Entsperren</target>
-        </trans-unit>
-        <trans-unit id="Resx/Walk" translate="yes" xml:space="preserve">
-          <source>gehen</source>
-          <target state="signed-off">gehen</target>
+        <trans-unit id="Resx/Wochenzusammenfassung" translate="yes" xml:space="preserve">
+          <source>Sum of Week</source>
+          <target state="signed-off">Tageszusammenfassung</target>
         </trans-unit>
       </group>
     </body>
