--- a/MiBandImport/Form1.de.xlf
+++ b/MiBandImport/Form1.de.xlf
@@ -53,9 +53,8 @@
 		  <source>Graphic sleep</source>
 		  <target state="signed-off">Grafik Schlaf</target></trans-unit>
         <trans-unit id="Resx/tabPageDayDetail.Text" translate="yes" xml:space="preserve">
-          <source>Tgesdetails</source>
-          <target state="signed-off">Tagesdetails</target>
-        </trans-unit>
+          <source>Details of Day</source>
+          <target state="signed-off">Tagesdetails</target></trans-unit>
         <trans-unit id="Resx/tabPageOrigin.Text" translate="yes" xml:space="preserve">
 		  <source>History</source>
 		  <target state="signed-off">Verlauf</target></trans-unit>
